<resources>
    <string name="app_name" translatable="false">Pixel Xpert</string>
    <string name="app_themed_icon_title">Alternative Themed Icon</string>
    <string name="xposed_desc">Customizations for Google Pixel devices</string>
    <string name="title_activity_settings" translatable="false">@string/app_name</string>
    <string name="volume_tile_title">Media Volume</string>
    <string name="caffeine_tile_title">Caffeine</string>
    <string name="high_brightness_flashlight_tile_title">High Brightness Flashlight</string>
    <string name="enable_high_brightness_flashlight_title">High Brightness Flashlight</string>
    <string name="enable_high_brightness_flashlight_summary">Utilizes camera to reach higher brightness than what the system allows. Uses more power!</string>
    <string name="sliding_tile_subtitle">Tap to adjust</string>
    <string name="app_switch_tile_title">Switch App Profile</string>
    <string name="hide_default">Hide (Default)</string>
    <string name="percent_of_default_size">% of default size</string>
    <string name="overlay_none_title">(Default)</string>
    <string name="general_section">General options</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="sysui_restart_needed">Requires a SystemUI restart to apply</string>
    <string name="restart_needed">Requires a reboot to apply</string>
    <string name="more_area">more area</string>
    <string name="less_area">less area</string>
    <string name="current_version">Current version: %s</string>
    <string name="notification_channel_update">Updates</string>
    <string name="notification_channel_update_desc">This channel shows notification about the latest updates.</string>
    <string name="new_update_title">Update available</string>
    <string name="new_update_desc">A new version of PixelXpert is available</string>
    <string name="skip_this_update">Skip this update</string>
    <string name="browser_not_found">Browser not found</string>
    <string name="settings_general_section_title">General</string>
    <string name="settings_update_section_title">Update</string>
    <string name="settings_misc_section_title">Misc</string>
    <string name="settings_about_section_title">About</string>
    <string name="settings_check_for_update_title">Check for updates</string>
    <string name="auto_update_title">Automatically check for updates</string>
    <string name="auto_update_summary">Check for new versions once in a while</string>
    <string name="update_over_wifi_title">Check updates over WiFi only</string>
    <string name="update_over_wifi_summary">Check for updates in background only when connected to wifi</string>
    <string name="github_repo_title">GitHub repository</string>
    <string name="github_repo_summary" translatable="false">siavash79/PixelXpert</string>
    <string name="telegram_group_title">Telegram channel</string>
    <string name="telegram_group_summary" translatable="false">\@PixelXpert_Github</string>
    <string name="usage_title">Usage</string>
    <string name="usage_summary">Open wiki page</string>
    <string name="crowdin_title">Translate to your language</string>
    <string name="crowdin_summary">Help us in translating %s into your own language</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="shrug" translatable="false">¯\\_(シ)_/¯</string>
    <string name="lockscreen_header_title">Lock screen</string>
    <string name="lockscreen_header_summary">Change your keyguard to match your taste</string>
    <string name="statusbar_header">Status bar</string>
    <string name="statusbar_header_summary">That thin bar that shows useful data</string>
    <string name="nav_header">Navigation bar</string>
    <string name="nav_header_summary">Change the way you navigate through apps</string>
    <string name="dialer_header">Phone &amp; dialer</string>
    <string name="dialer_header_summary">A bit of aid for your phone calls</string>
    <string name="misc_header">Miscellaneous</string>
    <string name="misc_header_summary">Whatever else offered by PixelXpert</string>
    <string name="qs_panel_category_title">Quick settings panel</string>
    <string name="qs_panel_category_summary">Brightness slider, flashlight level and more</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_summary">Customize visual style and iconography</string>
    <string name="pm_header">Package manager</string>
    <string name="pm_header_summary">Bypass security checks for apk files</string>
    <string name="hotspot_header">Portable hotspot</string>
    <string name="hotspot_header_summary">If you\'re into hidden WiFi stuff</string>
    <string name="hotspot_hide_ssid_title">Hide SSID</string>
    <string name="hotspot_inactivity_timeout_title">Inactivity timeout</string>
    <string name="hotspot_max_client_title">Maximum clients</string>
    <string name="hotspot_disable_approval_title">Hotspot connectivity issues workaround</string>
    <string name="hotspot_disable_approval_summary">Allow non-\"pre-approved\" clients to connect seamlessly</string>
    <string name="hotspot_force_unsupported_regions">Remove hotspot limitations in unsupported regions</string>
    <string name="depth_wallpaper_options">Depth effect wallpaper</string>
    <string name="depth_wallpaper_title">Depth effect wallpaper</string>
    <string name="depth_wallpaper_summary">Dynamically integrate wallpaper\'s foreground with the clock</string>
    <string name="depth_wallpaper_ai_model_title">Preferred AI model</string>
    <string name="depth_wallpaper_opacity_title">Wallpaper foreground opacity</string>
    <string name="depth_wallpaper_aod_title">Also on \"always on display\"</string>
    <string name="depth_wallpaper_model_ready">AI model is downloaded on the device</string>
    <string name="depth_wallpaper_model_not_available">AI model isn\'t available on the device (yet)</string>
    <string name="ls_general_options">Lock screen options</string>
    <string name="hide_avatar_title">Remove user avatar (multi user mode)</string>
    <string name="fingerprint_options">Fingerprint</string>
    <string name="transparent_fingerprint_circle">Remove background circle from under-display fingerprint</string>
    <string name="transparent_fingerprint_circle_off">Circle around fingerprint icon is active</string>
    <string name="transparent_fingerprint_circle_on">Circle around fingerprint icon will be hidden</string>
    <string name="fingerprint_icon">Remove foreground icon from under-display fingerprint</string>
    <string name="fingerprint_icon_off">Fingerprint icon is active</string>
    <string name="fingerprint_icon_on">Fingerprint icon will be hidden</string>
    <string name="custom_text_category">Custom text on Lockscreen</string>
    <string name="configure_carrier_text">Configure carrier text - Top of the screen</string>
    <string name="carrier_text_mod_disabled">Carrier text unchanged</string>
    <string name="carrier_text_mod_enabled">Custom carrier text</string>
    <string name="carrier_text_value">Custom carrier text</string>
    <string name="lockscreen_center_text_value">Clock area custom text</string>
    <string name="keyguard_dim_amount_title">Keyguard wallpaper dim</string>
    <string name="keyguard_bottom_category">Bottom area shortcuts</string>
    <string name="keyguard_bottom_buttons_transparent_title">Remove circle around icons</string>
    <string name="shufflePin_title">Shuffle Pin</string>
    <string name="wakeup_to_security_title">Show security input on device wake</string>
    <string name="easy_unlock_title">Easy unlock (Pin/Password)</string>
    <string name="easy_unlock_summary">If it didn\'t work the first time, try again</string>
    <string name="charging_info_title">Charging information on lockscreen</string>
    <string name="double_tap_sleep_title">Double-tap to sleep</string>
    <string name="sb_multi_row_system_icons">Multi-row system icons (needs raised statusbar height)</string>
    <string name="sb_multi_row_notification_icons">Multi-row notification icons (needs raised statusbar height)</string>
    <string name="sb_double_row_category">Double Statusbar rows</string>
    <string name="sb_icon_sort_mode">Icon placement method</string>
    <string name="sb_notification_limit">Maximum number of notification icons (Leave blank for Default)</string>
    <string name="lte_4g_icon_title">LTE / 4G Icon</string>
    <string name="combined_signal_icon_title">Combined signal icons</string>
    <string name="hide_roaming_title">Hide mobile roaming indicators</string>
    <string name="caution_mobile_costs">CAUTION - Not knowing that you\'re roaming can increase your mobile costs</string>
    <string name="volte_icon_title">Show VoLTE icon when available</string>
    <string name="vowifi_icon_title">Show VoWiFi icon when available</string>
    <string name="hide_privacychip_title">Hide privacy indicators\n(Camera, Mic)</string>
    <string name="sbc_header">Status bar clock customization</string>
    <string name="network_settings_pref">Network monitor settings…</string>
    <string name="ntsb_category_title">Network Monitor</string>
    <string name="ntsb_enabled_title">Enable network monitor</string>
    <string name="ntsb_position_title">Monitor Position</string>
    <string name="statusbar_general_options">Status Bar Options</string>
    <string name="status_bar_height">Status bar height (rotate screen to apply)</string>
    <string name="sb_padding_title">Status bar Padding</string>
    <string name="sb_padding_summary">Setting the values to min/max is equivalent to device Default</string>
    <string name="BB_enable_title">Enable Battery Bar</string>
    <string name="sb_ignored_icons_category">Status Bar ignored icons</string>
    <string name="sb_ignored_icons">Status Bar</string>
    <string name="sb_ignored_icons_statusbar">Select which icon will be hidden in statusbar</string>
    <string name="sb_kg_ignored_icons">Lockscreen</string>
    <string name="sb_ignored_icons_kg">Select which icon will be hidden in keyguard statusbar</string>
    <string name="sb_qs_ignored_icons">Quick Settings</string>
    <string name="sb_ignored_icons_qs">Select which icon will be hidden in quick settings</string>
    <string name="qs_leveled_flashlight_title">Flashlight-leveled tile</string>
    <string name="qs_flashlight_level_global_title">Apply flashlight level globally</string>
    <string name="qs_tile_qty_title">Quick settings tile count settings</string>
    <string name="qs_leveled_flashlight_summary">Longpress on tile to show the slider.\nRequires supported hardware</string>
    <string name="qs_pulldown_size">Quick pull-down width</string>
    <string name="qs_pulldown_switch_title">Quick QS panel pull-down from status bar</string>
    <string name="qs_pulldown_side_title">Quick pull-down side</string>
    <string name="qs_pulldown_category">Quick settings pull-down</string>
    <string name="qs_pullup_switch_title">Close quick settings with one swipe</string>
    <string name="qs_tile_label_size">QS Tile label size</string>
    <string name="qs_tile_secondary_label_size">QS Tile label summary size</string>
    <string name="quick_settings_tiles_category">QS Tile Options</string>
    <string name="qs_volume_unmute_title">Volume tile unmute value</string>
    <string name="sb_multi_row_clock_bottom">Move clock to bottom row</string>
    <string name="qs_brightness_slider_bottom_title">Brightness Slider Below Tiles</string>
    <string name="qs_brightness_slider_bottom_desc">Move the brightness slider below the quick settings tiles</string>
    <string name="qqs_brightness_slider_title">Always Show Brightness Slider</string>
    <string name="qqs_brightness_slider_desc">Show the brightness slider in collapsed quick settings and share it with expanded quick settings</string>
</resources>