<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/sh.siava.pixelxpert.ui.preferencesearch"
	android:visibility="visible">

	<sh.siava.pixelxpert.ui.preferences.IllustrationPreference
		android:key="quick_settings_illustration"
		app:lottie_rawRes="@raw/lottie_quick_settings"
		search:ignore="true" />

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/quick_settings_tiles_category"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="UnMuteVolumePCT"
			android:title="@string/qs_volume_unmute_title"
			app:defaultValue="50"
			app:iconSpaceReserved="false"
			app:updatesContinuously="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="leveledFlashTile"
			android:summary="@string/qs_leveled_flashlight_summary"
			android:title="@string/qs_leveled_flashlight_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="isFlashLevelGlobal"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/qs_flashlight_level_global_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreference
			android:key="qs_tile_qty"
			android:title="@string/qs_tile_qty_title"
			app:fragment="sh.siava.pixelxpert.ui.fragments.QSTileQtyFragment"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="QSLabelScaleFactor"
			android:title="@string/qs_tile_label_size"
			app:defaultValue="0"
			app:iconSpaceReserved="false"
			app:maxVal="50"
			app:minVal="-50"
			app:tickInterval="5"
			app:updatesContinuously="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="QSSecondaryLabelScaleFactor"
			android:title="@string/qs_tile_secondary_label_size"
			app:defaultValue="0"
			app:iconSpaceReserved="false"
			app:maxVal="50"
			app:minVal="-50"
			app:tickInterval="5"
			app:updatesContinuously="true" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/qs_pulldown_category"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="QSPullodwnEnabled"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/qs_pulldown_switch_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="QSPulldownPercent"
			android:title="@string/qs_pulldown_size"
			app:defaultValue="25"
			app:iconSpaceReserved="false"
			app:updatesContinuously="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialListPreference
			android:defaultValue="1"
			android:entries="@array/qs_pulldown_side_names"
			android:entryValues="@array/qs_pulldown_side_left"
			android:key="QSPulldownSide"
			android:summary="%s"
			android:title="@string/qs_pulldown_side_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="oneFingerPullupEnabled"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/qs_pullup_switch_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="qs_brightness_slider_bottom"
			android:summary="@string/qs_brightness_slider_bottom_desc"
			android:title="@string/qs_brightness_slider_bottom_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="qqs_brightness_slider"
			android:summary="@string/qqs_brightness_slider_desc"
			android:title="@string/qqs_brightness_slider_title"
			app:iconSpaceReserved="false" />
	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>
</PreferenceScreen>